{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 491,
  "lineage": "ad8de5d4-eac7-0567-a17b-ec9c10d5199c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "devops-project-group1-logs",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:loadbalancer/app/W2A1-alb-production/c30a3c2f2d32be4e",
            "arn_suffix": "app/W2A1-alb-production/c30a3c2f2d32be4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "W2A1-alb-production-1643132068.eu-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:loadbalancer/app/W2A1-alb-production/c30a3c2f2d32be4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "W2A1-alb-production",
            "preserve_host_header": false,
            "region": "eu-south-2",
            "security_groups": [
              "sg-0e6a2f4e9581a3993"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2a660b07bbdc203"
              },
              {
                "subnet_id": "subnet-0e99303f327d87dbc"
              }
            ],
            "subnets": [
              "subnet-0a2a660b07bbdc203",
              "subnet-0e99303f327d87dbc"
            ],
            "tags": {
              "Env": "production",
              "Name": "W2A1-alb-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-alb-production"
            },
            "vpc_id": "vpc-0530a11317a05b853",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0956581394HF5D5LXGAP"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:loadbalancer/app/W2A1-alb-production/c30a3c2f2d32be4e"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.s3_logs.aws_s3_bucket.logs",
            "module.s3_logs.aws_s3_bucket_lifecycle_configuration.logs",
            "module.s3_logs.aws_s3_bucket_ownership_controls.logs",
            "module.s3_logs.aws_s3_bucket_policy.logs",
            "module.s3_logs.aws_s3_bucket_public_access_block.logs",
            "module.s3_logs.aws_s3_bucket_server_side_encryption_configuration.logs",
            "module.s3_logs.data.aws_caller_identity.current",
            "module.s3_logs.data.aws_iam_policy_document.alb_access_logs",
            "module.s3_logs.data.aws_region.current",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:listener/app/W2A1-alb-production/c30a3c2f2d32be4e/e822b9886106585e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:targetgroup/W2A1-tg-production/0b119aa93f64d0bc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:listener/app/W2A1-alb-production/c30a3c2f2d32be4e/e822b9886106585e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:loadbalancer/app/W2A1-alb-production/c30a3c2f2d32be4e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:listener/app/W2A1-alb-production/c30a3c2f2d32be4e/e822b9886106585e"
          },
          "dependencies": [
            "module.alb.aws_lb.prod",
            "module.alb.aws_lb_target_group.prod",
            "module.alb.aws_security_group.alb",
            "module.s3_logs.aws_s3_bucket.logs",
            "module.s3_logs.aws_s3_bucket_lifecycle_configuration.logs",
            "module.s3_logs.aws_s3_bucket_ownership_controls.logs",
            "module.s3_logs.aws_s3_bucket_policy.logs",
            "module.s3_logs.aws_s3_bucket_public_access_block.logs",
            "module.s3_logs.aws_s3_bucket_server_side_encryption_configuration.logs",
            "module.s3_logs.data.aws_caller_identity.current",
            "module.s3_logs.data.aws_iam_policy_document.alb_access_logs",
            "module.s3_logs.data.aws_region.current",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:targetgroup/W2A1-tg-production/0b119aa93f64d0bc",
            "arn_suffix": "targetgroup/W2A1-tg-production/0b119aa93f64d0bc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:targetgroup/W2A1-tg-production/0b119aa93f64d0bc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-south-2:622333992348:loadbalancer/app/W2A1-alb-production/c30a3c2f2d32be4e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "W2A1-tg-production",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "W2A1-tg-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-tg-production"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:622333992348:targetgroup/W2A1-tg-production/0b119aa93f64d0bc"
          },
          "dependencies": [
            "module.s3_logs.aws_s3_bucket.logs",
            "module.s3_logs.aws_s3_bucket_lifecycle_configuration.logs",
            "module.s3_logs.aws_s3_bucket_ownership_controls.logs",
            "module.s3_logs.aws_s3_bucket_policy.logs",
            "module.s3_logs.aws_s3_bucket_public_access_block.logs",
            "module.s3_logs.aws_s3_bucket_server_side_encryption_configuration.logs",
            "module.s3_logs.data.aws_caller_identity.current",
            "module.s3_logs.data.aws_iam_policy_document.alb_access_logs",
            "module.s3_logs.data.aws_region.current",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:security-group/sg-0e6a2f4e9581a3993",
            "description": "ALB PRODUCTION - HTTP from internet, outbound to VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a2f4e9581a3993",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "W2A1-tsg-alb-production",
            "name_prefix": "",
            "owner_id": "622333992348",
            "region": "eu-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "W2A1-tsg-alb-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-tsg-alb-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "sg-0e6a2f4e9581a3993",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.s3_logs.aws_s3_bucket.logs",
            "module.s3_logs.aws_s3_bucket_lifecycle_configuration.logs",
            "module.s3_logs.aws_s3_bucket_ownership_controls.logs",
            "module.s3_logs.aws_s3_bucket_policy.logs",
            "module.s3_logs.aws_s3_bucket_public_access_block.logs",
            "module.s3_logs.aws_s3_bucket_server_side_encryption_configuration.logs",
            "module.s3_logs.data.aws_caller_identity.current",
            "module.s3_logs.data.aws_iam_policy_document.alb_access_logs",
            "module.s3_logs.data.aws_region.current",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:security-group/sg-042eb5815e602f123",
            "description": "PRODUCTION EC2 - HTTP from VPC (ALB), all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042eb5815e602f123",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC (ALB will restrict this further)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "W2A1-tsg-ec2-production",
            "name_prefix": "",
            "owner_id": "622333992348",
            "region": "eu-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "W2A1-tsg-ec2-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-tsg-ec2-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "sg-042eb5815e602f123",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8c73693f339c7c",
            "arn": "arn:aws:ec2:eu-south-2:622333992348:elastic-ip/eipalloc-0ec8c73693f339c7c",
            "association_id": "eipassoc-0e166accb50e1a71a",
            "domain": "vpc",
            "id": "eipalloc-0ec8c73693f339c7c",
            "network_border_group": "eu-south-2",
            "network_interface": "eni-0d2407ddcd35c177f",
            "private_dns": "ip-10-0-1-229.eu-south-2.compute.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-15-217-203-254.eu-south-2.compute.amazonaws.com",
            "public_ip": "15.217.203.254",
            "public_ipv4_pool": "amazon",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-eip-nat-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-eip-nat-production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:internet-gateway/igw-0833f92c1ae9e7eb7",
            "id": "igw-0833f92c1ae9e7eb7",
            "owner_id": "622333992348",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-igw-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-igw-production"
            },
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8c73693f339c7c",
            "association_id": "eipassoc-0e166accb50e1a71a",
            "connectivity_type": "public",
            "id": "nat-04a982450ce17c836",
            "network_interface_id": "eni-0d2407ddcd35c177f",
            "private_ip": "10.0.1.229",
            "public_ip": "15.217.203.254",
            "region": "eu-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e99303f327d87dbc",
            "tags": {
              "Env": "production",
              "Name": "W2A1-ngw-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-ngw-production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:route-table/rtb-051dea3c12f9ba389",
            "id": "rtb-051dea3c12f9ba389",
            "owner_id": "622333992348",
            "propagating_vgws": [],
            "region": "eu-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a982450ce17c836",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "W2A1-rtb-private-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-rtb-private-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:route-table/rtb-07eb10eac21a3bab8",
            "id": "rtb-07eb10eac21a3bab8",
            "owner_id": "622333992348",
            "propagating_vgws": [],
            "region": "eu-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0833f92c1ae9e7eb7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "W2A1-rtb-public-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-rtb-public-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_private_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd445ac88af6a922",
            "region": "eu-south-2",
            "route_table_id": "rtb-051dea3c12f9ba389",
            "subnet_id": "subnet-085f4bee3d503a796"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_private_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66947c196d5f211",
            "region": "eu-south-2",
            "route_table_id": "rtb-051dea3c12f9ba389",
            "subnet_id": "subnet-07f92bc3e3239daaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_public_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb664e53257ae661",
            "region": "eu-south-2",
            "route_table_id": "rtb-07eb10eac21a3bab8",
            "subnet_id": "subnet-0e99303f327d87dbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_public_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ed921e6e694797f",
            "region": "eu-south-2",
            "route_table_id": "rtb-07eb10eac21a3bab8",
            "subnet_id": "subnet-0a2a660b07bbdc203"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_private_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:subnet/subnet-085f4bee3d503a796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f4bee3d503a796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-production-subnet_private_1"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-production-subnet_private_1"
            },
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-085f4bee3d503a796",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "subnet_private_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:subnet/subnet-07f92bc3e3239daaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f92bc3e3239daaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-production-subnet_private_2"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-production-subnet_private_2"
            },
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-07f92bc3e3239daaa",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_public_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:subnet/subnet-0e99303f327d87dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99303f327d87dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-production-subnet_public_1"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-production-subnet_public_1"
            },
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-0e99303f327d87dbc",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet_public_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:subnet/subnet-0a2a660b07bbdc203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2a660b07bbdc203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-production-subnet_public_2"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-production-subnet_public_2"
            },
            "vpc_id": "vpc-0530a11317a05b853"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622333992348",
            "id": "subnet-0a2a660b07bbdc203",
            "region": "eu-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:622333992348:vpc/vpc-0530a11317a05b853",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8412b62a5c735d3",
            "default_route_table_id": "rtb-0ed4237037028efac",
            "default_security_group_id": "sg-088dd2784765e291a",
            "dhcp_options_id": "dopt-0e037af7136b1d016",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0530a11317a05b853",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed4237037028efac",
            "owner_id": "622333992348",
            "region": "eu-south-2",
            "tags": {
              "Env": "production",
              "Name": "W2A1-vpc-production"
            },
            "tags_all": {
              "Env": "production",
              "Name": "W2A1-vpc-production"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}